Changed how the bot leaves party and sends message

--- a/config.example.json
+++ b/config.example.json
@@ -1,11 +1,13 @@
 {
     "server": {
-        "host": "mc.hypixel.net",
-        "port": 25565
+        "host": "mc.hypixel.net"
       },
       "minecraft": {
         "accountType": "mojang",
         "username": "yourUsername",
         "password": "yourPassword"
+      },
+      "settings": {
+        "timeout": 10000
       }
 }
