Added build and run commands

--- a/.do/deploy.template.yaml
+++ b/.do/deploy.template.yaml
@@ -5,3 +5,5 @@ spec:
    git:
      branch: master
      repo_clone_url: https://github.com/itsneyoa/fragrunning-bot.git
+  build_command: yarn
+  run_command: node index.js
