--- a/config.example.json
+++ b/config.example.json
@@ -1,13 +1,16 @@
 {
-    "server": {
-        "host": "mc.hypixel.net"
-      },
-      "minecraft": {
-        "accountType": "mojang",
-        "username": "yourUsername",
-        "password": "yourPassword"
-      },
-      "settings": {
-        "timeout": 10000
-      }
+  "server": {
+    "host": "mc.hypixel.net"
+  },
+  "minecraft": {
+    "accountType": "mojang",
+    "username": "yourUsername",
+    "password": "yourPassword"
+  },
+  "settings": {
+    "timeout": 10000
+  },
+  "blacklist": {
+    "users": []
+  }
 }
