--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A bot written by [SergeantSar](https://github.com/SergeantSar) and [neyoa](https://github.com/itsneyoa) because we couldn't find any open source ones and the public ones keep getting banned\r > Warning -  Hypixel has a history of banning these bots without a reason. As there is no official statement yet this is entirely use at your own risk!",
   "main": "index.js",
   "scripts": {
-    "test": "node ."
+    "test": "node .",
+    "format": "prettier . --write"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,14 @@
   "homepage": "https://github.com/itsneyoa/fragrunning-bot#readme",
   "dependencies": {
     "mineflayer": "^3.3.0"
+  },
+  "devDependencies": {
+    "prettier": "^2.3.1"
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": false,
+    "singleQuote": true
   }
 }
