--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/itsneyoa/fragrunning-bot#readme",
   "dependencies": {
+    "chalk": "^4.1.1",
     "mineflayer": "^3.3.0"
   },
   "devDependencies": {
