--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/itsneyoa/fragrunning-bot#readme",
   "dependencies": {
-    "axois": "^0.0.1-security",
+    "axios": "^0.21.1",
     "chalk": "^4.1.1",
     "mineflayer": "^3.3.0"
   },
