--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A bot written by [SergeantSar](https://github.com/SergeantSar) and [neyoa](https://github.com/itsneyoa) because we couldn't find any open source ones and the public ones keep getting banned\r > Warning -  Hypixel has a history of banning these bots without a reason. As there is no official statement yet this is entirely use at your own risk!",
   "main": "index.js",
   "scripts": {
-    "test": "node ."
+    "test": "node .",
+    "start": "node index.js",
+    "setup": "node index.js --setup"
   },
   "repository": {
     "type": "git",
@@ -19,6 +21,9 @@
   "dependencies": {
     "axios": "^0.21.1",
     "chalk": "^4.1.1",
+    "clear": "^0.1.0",
+    "figlet": "^1.5.0",
+    "inquirer": "^8.1.1",
     "mineflayer": "^3.3.0"
   },
   "devDependencies": {}
